--- a/Neermax/assets/css/style.css
+++ b/Neermax/assets/css/style.css
@@ -436,7 +436,7 @@ h1, h2, h3, h4, h5, h6 {
 .mobile-nav-active .mobile-nav {
   opacity: 1;
   visibility: visible;
-  height: 35%
+  height: 35%;
 }
 
 .mobile-nav-active .mobile-nav-toggle i {
