--- a/finac/css/style.css
+++ b/finac/css/style.css
@@ -178,8 +178,29 @@ h6,
     transition: .3s;
 }
 
-.service-item:hover p {
-    margin-bottom: 25px !important;
+.service-item:hover p>i>h3 {
+    /* margin-bottom: 25px !important; */
+    display: none;
+    
+}
+
+.subservice{
+    position: relative;
+    overflow: hidden;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+}
+
+.subservice:hover h3 {
+    display: none
+  }
+
+.subservice:hover:before {
+content: "sdsdsadasdas"
 }
 
 .team-item img {
