--- a/finac/css/style.css
+++ b/finac/css/style.css
@@ -1,4 +1,6 @@
 /********** Template CSS **********/
+@import url(//db.onlinewebfonts.com/c/84693c6ac1f359fe8a4ac49b69f492dd?family=Gotham+Light);
+
 :root {
     --primary: #255269;
     --secondary: #F6F6F6;
