--- a/finac/css/style.css
+++ b/finac/css/style.css
@@ -218,8 +218,8 @@ h6,
 }*/
 
 .team-item img {
-    transform: scale(1.15);
-    margin-left: -30px;
+    /* transform: scale(1.15); */
+    /* margin-left: -30px; */
     transition: .5s;
 }
 
