--- a/brilliant/css/main.css
+++ b/brilliant/css/main.css
@@ -2549,3 +2549,18 @@ shortcodes page css
   display: flex;
   justify-content: center;
 }
+
+.timg{
+    float: left;
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+    margin-bottom: 5px;
+}
+.hr{
+  border-top: 1px solid black;
+}
+
+.clearfix {
+  overflow: auto;
+}
