--- a/brilliant/css/main.css
+++ b/brilliant/css/main.css
@@ -331,15 +331,6 @@ input.search-form:hover {
   top:0;
 }
 
-/* ///////////////////// */
-/* NEWLY ADDED CODE */
-.navbar-inverse .navbar-nav .dropdown-menu .dropdown-submenu:before{
-  position: absolute;
-  /* top:0; */
-}
-/* /NEWLY ADDED CODE */
-/* //////////////////////////////// */
-
 .navbar-inverse .navbar-nav .dropdown-menu > li > a {
   padding: 8px;
   color: #fff;
@@ -367,6 +358,55 @@ input.search-form:hover {
 }
 
 
+
+/* new code starts */
+
+.navbar-inverse .navbar-nav .dropdown-menu .uplift {
+  display: none;
+  text-decoration: none;
+  list-style: none;
+     padding: 10px;
+     background-color: rgba(0,0,0,.85);
+
+}
+
+.navbar-inverse .navbar-nav .dropdown-menu .uplift > li > a {
+  padding: 8px;
+  color: #FFF
+
+}
+
+.navbar-inverse .navbar-nav .dropdown-menu .uplift > li:hover > a,
+.navbar-inverse .navbar-nav .dropdown-menu .uplift > li:focus > a,
+.navbar-inverse .navbar-nav .dropdown-menu .uplift > li.active > a {
+  background-color: #c52d2f;
+  color: #fff;
+}
+
+.navbar-inverse .navbar-nav .dropdown .dropdown-menu li:hover .uplift{
+  display: block;
+  position: absolute;
+    left: 100%;
+    top: 0;
+    background-color: #333;
+    color: #fff;
+    width: 200px;
+    font-weight: normal;
+    line-height: 2.428571429;
+    font-size: 14px;
+}
+
+/* .navbar-inverse .navbar-nav .dropdown .dropdown-menu li:hover .uplift{
+padding: 8px;
+color: #fff;
+
+} */
+
+.navbar-inverse .navbar-nav .dropdown .dropdown-menu li .uplift li:hover{
+  background-color: #c52d2f;
+  color: #fff;
+  
+}
 /*************************
 *******Home Page******
 **************************/
@@ -2573,3 +2613,6 @@ shortcodes page css
 .clearfix {
   overflow: auto;
 }
+
+
+/* Menu */
